src/Volo/FrontendBundle/Resources/public/css/partial/account-dropdown.scss
.header__account__dropdown {
  .header_account__dropdown__link {
    padding-top: $space-xs;
    padding-bottom: $space-xs;

    @include make-link($color-text-primary, $color-text-highlight);
  }

  .header__acount__dropdown_rows li:first-child {
    border-bottom: 1px solid $dropdown-border;
  }

  .dropdown-menu {
    margin-top: 30px;
    left: -2px;

    &:before {
      position: absolute;
      top: -7px;
      left: 7px;
      display: inline-block;
      border-right: 7px solid transparent;
      border-bottom: 7px solid #ccc;
      border-left: 7px solid transparent;
      border-bottom-color: rgba(0, 0, 0, 0.2);
      content: '';
    }

    &:after {
      position: absolute;
      top: -6px;
      left: 8px;
      display: inline-block;
      border-right: 6px solid transparent;
      border-bottom: 6px solid #ffffff;
      border-left: 6px solid transparent;
      content: '';
    }

    @include respond-from("screen-md") {
      right: -5px;
      left: auto;
      margin-top: 0;

      &:before {
        right: 7px;
        left: initial;
      }

      &:after {
        right: 8px;
        left: initial;
      }
    }
  }
}

